--- a/public/game.html
+++ b/public/game.html
@@ -38,7 +38,10 @@
                 <div id="15" class = "card"></div>
                 <div id="16" class = "card"></div>
             </section>
-            <section id="popup"></section>
+            <section id="popup">
+                    <div id="winner_status"></div>
+                    <a id="back_button" href="/">Back</a>
+            </section>
             <aside class = "right">     
                 <ul style="list-style-type:none;">
                 <li>Your opponent</li>
